--- a/package.json
+++ b/package.json
@@ -16,7 +16,23 @@
     "react-native": "0.72.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.3",
+    "@types/jest": "^29.5.10",
+    "@types/react": "^18.2.39",
+    "@types/react-test-renderer": "^18.0.7",
+    "@types/redux-logger": "^3.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-expo": "^49.0.0",
+    "lint-staged": "^15.1.0",
+    "prettier": "^3.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "private": true
 }
